feature: adds navbar

--- a/components/aslanImage/aslanImage.templ
+++ b/components/aslanImage/aslanImage.templ
@@ -1,6 +1,6 @@
 package components
 
-import "github.com/AslanSN/CV/db"
+import "github.com/AslanSN/CurriculumVitae/db"
 
 templ AslanImage() {
 	<img
