--- a/views/index.templ
+++ b/views/index.templ
@@ -1,8 +1,8 @@
 package views
 
 import (
-	home "github.com/AslanSN/CV/views/home"
-	"github.com/AslanSN/CV/db"
+	home "github.com/AslanSN/CurriculumVitae/views/home"
+	"github.com/AslanSN/CurriculumVitae/db"
 )
 
 templ Index() {
@@ -11,7 +11,7 @@ templ Index() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
-			<title>AslanSN CV</title>
+			<title>AslanSN CurriculumVitae</title>
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
 			<link rel="stylesheet" href={ db.RepoURL + "/static/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
