--- a/components/iconLabel/iconLabel.templ
+++ b/components/iconLabel/iconLabel.templ
@@ -1,7 +1,7 @@
 package components
 
 import (
-	"github.com/AslanSN/CV/helpers"
+	"github.com/AslanSN/CurriculumVitae/helpers"
 )
 
 type IconLabelParams struct {
