--- a/components/list/list.templ
+++ b/components/list/list.templ
@@ -1,8 +1,8 @@
 package components
 
 import (
-	"github.com/AslanSN/CV/helpers"
-	listItem "github.com/AslanSN/CV/components/listItem"
+	"github.com/AslanSN/CurriculumVitae/helpers"
+	listItem "github.com/AslanSN/CurriculumVitae/components/listItem"
 )
 
 templ List(label string, slice []string) {
