feat: Add tags for auto scroll

--- a/components/aboutMe/aboutMe.templ
+++ b/components/aboutMe/aboutMe.templ
@@ -3,7 +3,7 @@ package components
 import "github.com/AslanSN/CurriculumVitae/db/constants"
 
 templ AboutMe() {
-	<div class="align-middle">
+	<div id="aboutMe" class="align-middle">
 		<h1 class="text-5xl mb-6 w-fit font-bold">
 			ABOUT ME
 		</h1>
