--- a/components/navbar/navbar.templ
+++ b/components/navbar/navbar.templ
@@ -27,9 +27,10 @@ templ NavBar() {
 			</div>
 		</div>
 		<div class="navbar-center">
-			<a class="navbar-item">ABOUT ME</a>
-			<a class="navbar-item">SKILLS</a>
-			<a class="navbar-item">PORTFOLIO</a>
+			<a class="navbar-item" href="#hero" >HOME</a>
+			<a class="navbar-item" href="#aboutMe" >ABOUT ME</a>
+			<a class="navbar-item" href="#skills">SKILLS</a>
+			<a class="navbar-item" href="#experience">PORTFOLIO</a>
 		</div>
 		<div class="navbar-end">
 			<div class="navbar-item btn cursor-pointer">
