--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -21,7 +21,7 @@ templ Home() {
 					</section>
 					<section class="w-full mb-10 ">
 						<div class="flex flex-col">
-							<h1 class="text-5xl mb-6 w-fit font-bold">
+							<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
 								EXPERIENCE
 							</h1>
 							<section class="flex flex-row flex-wrap flow justify-between">
