--- a/views/index.templ
+++ b/views/index.templ
@@ -7,7 +7,7 @@ import (
 
 templ Index() {
 	<!DOCTYPE html>
-	<html lang="en">
+	<html lang="en" class="scroll-smooth focus:scroll-auto">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
