--- a/components/hero/hero.templ
+++ b/components/hero/hero.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ Hero() {
-	<section class="flex flex-col md:flex md:flex-row  align-middle w-full text-6xl items-center md:mt-16 md:ms-8 md:me-8 md:p-8 md:mb-4 pb-0 backdrop-blur-sm rounded-lg justify-evenly">
+	<section id="hero" class="flex flex-col md:flex md:flex-row  align-middle w-full text-6xl items-center md:mt-16 md:ms-8 md:me-8 md:p-8 md:mb-4 pb-0 backdrop-blur-sm rounded-lg justify-evenly">
 		<div class="flex flex-col items-end">
 			<h1 class="pb-4 md:pb-8">
 				<b class="text-4xl sm:text-7xl lg:text-8xl">Alan Staub Negro</b>
