--- a/components/skills/skills.templ
+++ b/components/skills/skills.templ
@@ -7,8 +7,7 @@ import (
 )
 
 templ Skills() {
-	// <ul class="flex flex-row w-fit flex-wrap items-baseline h-fit">
-	<div class="flex flex-col items-start h-full">
+	<div id="skills" class="flex flex-col items-start h-full">
 		<h1 class="text-5xl mb-6 w-fit font-bold">
 			SKILLS
 		</h1>
