fix: experience naming

--- a/components/navbar/navbar.templ
+++ b/components/navbar/navbar.templ
@@ -30,7 +30,7 @@ templ NavBar() {
 			<a class="navbar-item" href="#hero" >HOME</a>
 			<a class="navbar-item" href="#aboutMe" >ABOUT ME</a>
 			<a class="navbar-item" href="#skills">SKILLS</a>
-			<a class="navbar-item" href="#experience">PORTFOLIO</a>
+			<a class="navbar-item" href="#experience">EXPERIENCE</a>
 		</div>
 		<div class="navbar-end">
 			<div class="navbar-item btn cursor-pointer">
