--- a/components/navbar.templ
+++ b/components/navbar.templ
@@ -1,7 +1,6 @@
 package components
 
 import "github.com/AslanSN/CurriculumVitae/components/iconComponents"
-import "github.com/AslanSN/CurriculumVitae/components/downloadItem"
 
 templ NavBar() {
 	<div class="navbar navbar-sticky navbar-glass">
@@ -18,9 +17,9 @@ templ NavBar() {
 							</span>
 						</label>
 						<div class="dropdown-menu dropdown-menu-bottom-right mt-10">
-							@components.DownloadItem("ENGLISH", "/static/cv/AlanStaubNegro-CV-EN-24.pdf", "", "")
-							@components.DownloadItem("SPANISH", "/static/cv/AlanStaubNegro-CV-ES-24.pdf", "-1", "")
-							@components.DownloadItem("FRENCH", "#", "-1", "")
+							@DownloadItem("ENGLISH", "/static/cv/AlanStaubNegro-CV-EN-24.pdf", "", "")
+							@DownloadItem("SPANISH", "/static/cv/AlanStaubNegro-CV-ES-24.pdf", "-1", "")
+							@DownloadItem("FRENCH", "#", "-1", "")
 						</div>
 					</div>
 				</div>
