--- a/views/index.templ
+++ b/views/index.templ
@@ -1,7 +1,6 @@
 package views
 
 import (
-	home "github.com/AslanSN/CurriculumVitae/views/home"
 	"github.com/AslanSN/CurriculumVitae/db"
 )
 
@@ -20,7 +19,7 @@ templ Index() {
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
 		<body>
-			@home.Home()
+			@home()
 		</body>
 	</html>
 }
