--- a/components/list.templ
+++ b/components/list.templ
@@ -2,14 +2,13 @@ package components
 
 import (
 	"github.com/AslanSN/CurriculumVitae/helpers"
-	listItem "github.com/AslanSN/CurriculumVitae/components/listItem"
 )
 
 templ List(label string, slice []string) {
 	<label class="text-xl underline" for={ helpers.Identity(label) }>{ label }</label>
 	<ul class="list-disc list-inside">
 		for _, item := range slice {
-			@listItem.ListItem(item)
+			@ListItem(item)
 		}
 	</ul>
 }
