--- a/views/index.templ
+++ b/views/index.templ
@@ -1,7 +1,7 @@
 package views
 
 import (
-	"github.com/AslanSN/CurriculumVitae/db"
+	"github.com/AslanSN/CurriculumVitae/helpers"
 )
 
 templ Index() {
@@ -12,9 +12,9 @@ templ Index() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>AslanSN CurriculumVitae</title>
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
-			<link rel="stylesheet" href={ db.RepoURL + "/static/css/output.css" }/>
+			<link rel="stylesheet" href={ helpers.RepoURL + "/static/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
-			<link rel="shortcut icon" type="image/png" href={ db.RepoURL + "/static/images/FotoPersonalDiscord.png" }/>
+			<link rel="shortcut icon" type="image/png" href={ helpers.RepoURL + "/static/images/FotoPersonalDiscord.png" }/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
