--- a/views/index.templ
+++ b/views/index.templ
@@ -14,7 +14,8 @@ templ Index() {
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
 			<link rel="stylesheet" href={ helpers.RepoURL + "/static/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
-			<link rel="shortcut icon" type="image/png" href={ helpers.RepoURL + "/static/images/FotoPersonalDiscord.png" }/>
+			// <link rel="shortcut icon" type="image/png" href={ helpers.RepoURL + "/static/images/AslanSNPhoto.png" }/>
+			<link rel="shortcut icon" type="image/png" href="/images/AslanSNPhoto.png"/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
