fix: unneeded URL function

--- a/views/index.templ
+++ b/views/index.templ
@@ -12,10 +12,10 @@ templ Index() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>AslanSN CurriculumVitae</title>
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
-			<link rel="stylesheet" href={ helpers.RepoURL + "/css/output.css" }/>
+			<link rel="stylesheet" href={ "/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
-			// <link rel="shortcut icon" type="image/png" href={ helpers.RepoURL + "/images/AslanSNPhoto.png" }/>
-			<link rel="shortcut icon" type="image/png" href="/images/AslanSNPhoto.png"/>
+			// <link rel="shortcut icon" type="image/png" href={ "/images/AslanSNPhoto.png" }/>
+			<link rel="shortcut icon" type="image/webp" href="/images/FaviconCV.webp"/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
