--- a/views/index.templ
+++ b/views/index.templ
@@ -1,5 +1,6 @@
 package views
 
+import "github.com/AslanSN/CurriculumVitae/helpers"
 
 templ Index() {
 	<!DOCTYPE html>
@@ -11,7 +12,7 @@ templ Index() {
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
 			<link rel="stylesheet" href={ "/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
-			<link rel="shortcut icon" type="image/webp" href="/images/FaviconCV.webp"/>
+			<link rel="shortcut icon" type="image/webp" href={helpers.RepoURL + "/images/FaviconCV.webp"}/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
