Revert "fix: unneeded URL function"
This reverts commit 37dabc8885dc124329bce5e046cc0db6faebe454.

--- a/components/aslanImage.templ
+++ b/components/aslanImage.templ
@@ -8,4 +8,5 @@ templ AslanImage() {
 		src={helpers.RepoURL + "/images/AslanSNPhoto.png"}
 		alt="Placeholder AslanImageAlt"
 	/>
+	// src={ helpers.RepoURL + "/images/AslanSNPhoto.png" }
 }
