--- a/views/index.templ
+++ b/views/index.templ
@@ -10,7 +10,7 @@ templ Index() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>AslanSN CurriculumVitae</title>
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
-			<link rel="stylesheet" href={ "/css/output.css" }/>
+			<link rel="stylesheet" href={ helpers.RepoURL + "/css/output.css" }/>
 			<script src="/assets/js/htmx.min.js"></script>
 			<link rel="shortcut icon" type="image/webp" href={helpers.RepoURL + "/images/FaviconCV.webp"}/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
