--- a/components/experienceCard.templ
+++ b/components/experienceCard.templ
@@ -9,7 +9,7 @@ templ ExperienceCard(workplace constants.ExperienceStruct) {
 	<div class="card rounded-2xl flex flex-col items-center  pt-8 mb-10">
 		<img
 			class="px-4 h-1/4"
-			src={ workplace.ImageSource }
+			src={ string(workplace.ImageSource) }
 			alt={ workplace.ImageAlternative }
 		/>
 		<article class="card-body sm:w-96 mx-4 first:ms-0">
