--- a/components/navbar.templ
+++ b/components/navbar.templ
@@ -1,9 +1,12 @@
 package components
 
 import (
-	"github.com/AslanSN/CurriculumVitae/components/iconComponents"
+	icons "github.com/AslanSN/CurriculumVitae/components/iconComponents"
 	"github.com/AslanSN/CurriculumVitae/helpers"
 )
+
+// var englishCV templ.SafeURL =
+// var spanishCV templ.SafeURL =
 templ NavBar() {
 	<div class="navbar navbar-sticky navbar-glass">
 		<div class="navbar-start">
@@ -19,8 +22,8 @@ templ NavBar() {
 							</span>
 						</label>
 						<div class="dropdown-menu dropdown-menu-bottom-right mt-10">
-							@DownloadItem("ENGLISH", {helpers.RepoURL + "/static/cv/AlanStaubNegro-CV-EN-24.pdf"}, "", "")
-							@DownloadItem("SPANISH", {helpers.RepoURL + "/static/cv/AlanStaubNegro-CV-ES-24.pdf"}, "-1", "")
+							@DownloadItem("ENGLISH", helpers.RepoURL+"/static/cv/AlanStaubNegro-CV-EN-24.pdf", "", "")
+							@DownloadItem("SPANISH", helpers.RepoURL+"/static/cv/AlanStaubNegro-CV-ES-24.pdf", "-1", "")
 							@DownloadItem("FRENCH", "#", "-1", "")
 						</div>
 					</div>
@@ -34,28 +37,34 @@ templ NavBar() {
 			<a class="navbar-item" href="#experience">EXPERIENCE</a>
 		</div>
 		<div class="navbar-end">
-			<div class="navbar-item btn cursor-pointer">
-				<div class="dropdwon-container justify-center">
-					<div class="dropdwon dropdown-hover flex row-auto">
-						<label tabindex="0" class="flex flex-row flex-nowrap items-center align-middle">
-							<span>
-								LANGUAGE
-							</span>
-							<span>
-								@icons.DropdownIcon("currentColor")
-							</span>
-						</label>
-						<div class="dropdown-menu dropdown-menu-bottom-center mt-10">
-							<a class="dropdown-item text-sm">
-								ENGLISH
-							</a>
-							<a tabindex="-1" class="dropdown-item text-sm">ESPAÑOL</a>
-							<a tabindex="-1" class="dropdown-item text-sm">FRANÇAIS</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<a class="navbar-item">CONTACT ME</a>
+			// TODO
+			// <div class="navbar-item btn cursor-pointer">
+			// 	<div class="dropdwon-container justify-center">
+			// 		<div class="dropdwon dropdown-hover flex row-auto">
+			// 			<label tabindex="0" class="flex flex-row flex-nowrap items-center align-middle">
+			// 				<span>
+			// 					LANGUAGE
+			// 				</span>
+			// 				<span>
+			// 					@icons.DropdownIcon("currentColor")
+			// 				</span>
+			// 			</label>
+			// 			<div class="dropdown-menu dropdown-menu-bottom-center mt-10">
+			// 				<a class="dropdown-item text-sm">
+			// 					ENGLISH
+			// 				</a>
+			// 				<a tabindex="-1" class="dropdown-item text-sm">ESPAÑOL</a>
+			// 				{/*
+			// 				* // TODO
+			// 				* <a tabindex="-1" class="dropdown-item text-sm">FRANÇAIS</a>
+			// 				*/
+			// 				}
+			// 			</div>
+			// 		</div>
+			// 	</div>
+			// </div>
+			// <a class="navbar-item" href="mailto:aslan.staub@pm.me">CONTACT ME</a>
+			<label class="btn btn-ghost" for="modal-contact">CONTACT ME</label>
 		</div>
 	</div>
 }
