--- a/views/index.templ
+++ b/views/index.templ
@@ -15,6 +15,8 @@ templ Index() {
 			<link rel="shortcut icon" type="image/webp" href={ string(helpers.RepoURL + "/images/FaviconCV.webp") }/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
+			<script src={ string(helpers.RepoURL + "/js/customAlert.js") }></script>
+			<script src="assets/js/customAlert.js"></script>
 		</head>
 		<body>
 			@home()
