--- a/views/index.templ
+++ b/views/index.templ
@@ -1,6 +1,8 @@
 package views
 
-import "github.com/AslanSN/CurriculumVitae/helpers"
+import (
+	"github.com/AslanSN/CurriculumVitae/helpers"
+)
 
 templ Index() {
 	<!DOCTYPE html>
