--- a/components/experienceCard.templ
+++ b/components/experienceCard.templ
@@ -6,13 +6,13 @@ import (
 )
 
 templ ExperienceCard(workplace constants.ExperienceStruct) {
-	<div class="card rounded-2xl flex flex-col items-center  pt-8 mb-10">
+	<div class="card rounded-2xl flex flex-col items-center pt-8 mb-10">
 		<img
 			class="px-4 h-1/4"
 			src={ string(workplace.ImageSource) }
 			alt={ workplace.ImageAlternative }
 		/>
-		<article class="card-body sm:w-96 mx-4 first:ms-0">
+		<article class="card-body max-sm:py-4 max-sm:px-0 sm:w-96 mx-4 first:ms-0">
 			<div class="flex flex-col">
 				if workplace.Link != "" {
 					@LinkItem(workplace.Link, "link text-cyan-800 hover:text-cyan-500 dark:text-cyan-600 dark:hover:text-cyan-200 link-underline px-0 md:px-0") {
