--- a/components/iconComponents/dropdownIcon.templ
+++ b/components/iconComponents/dropdownIcon.templ
@@ -1,5 +1,7 @@
 package icons
 
 templ DropdownIcon(fill string) {
-	<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-360 280-560h400L480-360Z"></path></svg>
+	<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+		<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+	</svg>
 }
