--- a/components/hero.templ
+++ b/components/hero.templ
@@ -6,13 +6,8 @@ templ Hero() {
 			<h1 class="pb-4 md:pb-8">
 				<b class="text-4xl sm:text-7xl lg:text-8xl">Alan Staub Negro</b>
 				<h2 class="text-2xl sm:text-5xl lg:text-7xl font-mono p-0 m-0">
-					Mid Full Stack developer
+					Full Stack Developer
 				</h2>
-				<h3 class="text-xl sm:text-4xl lg:text-6xl font-mono p-0 m-0">
-					<i>
-						Front end strong
-					</i>
-				</h3>
 			</h1>
 			@HeroFooter()
 		</div>
