feat: create challenge card

--- a/app/components/heroFooter.templ
+++ b/app/components/heroFooter.templ
@@ -1,8 +1,6 @@
 package components
 
-import (
-	"github.com/AslanSN/CurriculumVitae/db/constants"
-)
+import "github.com/AslanSN/CurriculumVitae/db/constants"
 
 templ HeroFooter() {
 	<footer>
