--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -2,8 +2,8 @@ package views
 
 import (
 	"github.com/AslanSN/CurriculumVitae/app/components"
-	"github.com/AslanSN/CurriculumVitae/db/constants"
 	"github.com/AslanSN/CurriculumVitae/app/layouts"
+	"github.com/AslanSN/CurriculumVitae/db/constants"
 )
 
 templ home() {
@@ -30,45 +30,22 @@ templ home() {
 							</section>
 						</div>
 						<div>
-							
 							<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
 								Challenges
 							</h1>
 							<section class="flex flex-row flex-wrap flow justify-center lg:justify-between">
-							<ul>
-								<li>
-									<h2>
-										Logitravel - Best technical skills candidate
-									</h2> 
-								</li>
-								<li>
-									<h2>
-										Nivimu - Chosen
-									</h2> 
-								</li>
-								<li>
-									<h2>
-										Inditex - Candidate process stopped
-									</h2> 
-									<iframe id="inditexMarvelWebChallenge" title="Zara Marvel Web Challenge" width="800" height="400" src="https://zara-marvelous.vercel.app/">
-										
-									</iframe>
-								</li>
-								<li>
-									<h2>
-										Arup
-									</h2> 
-								</li>
-							</ul>
+								<ul>
+								for _,challenge := range constants.Challenges{
+									@components.ChallengeCard(challenge)
+								}
+								</ul>
 							</section>
 						</div>
 						<div>
-							
 							<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
 								Personal Projects
 							</h1>
 						</div>
-
 					</section>
 				</div>
 			}
