--- a/app/components/list.templ
+++ b/app/components/list.templ
@@ -1,8 +1,6 @@
 package components
 
-import (
-	"github.com/AslanSN/CurriculumVitae/internal/helpers"
-)
+import "github.com/AslanSN/CurriculumVitae/helpers"
 
 templ List(label string, slice []string) {
 	<label class="text-xl underline underline-offset-2 decoration-cyan-200 text-slate-600 dark:decoration-cyan-800 dark:text-slate-400" for={ helpers.Identity(label) }>{ label }</label>
