--- a/app/components/dropDownButton.templ
+++ b/app/components/dropDownButton.templ
@@ -1,6 +1,6 @@
 package components
 
-import icons "github.com/AslanSN/CurriculumVitae/app/components/iconComponents"
+import "github.com/AslanSN/CurriculumVitae/app/components/iconComponents"
 
 func menuOrientationHandler(menuOrientation string) string {
 	if menuOrientation != "" {
