--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -30,6 +30,18 @@ templ home() {
 							</section>
 						</div>
 					</section>
+					<section class="w-full mb-10">
+						<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
+							Challenges
+						</h1>
+						<section class="flex flex-row flex-wrap flow justify-center lg:justify-between">
+							<ul>
+								for _,challenge := range constants.Challenges {
+									@components.ChallengeCard(challenge)
+								}
+							</ul>
+						</section>
+					</section>
 				</div>
 			}
 		</main>
