--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -34,8 +34,8 @@ templ home() {
 						<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
 							Challenges
 						</h1>
-						<section class="flex flex-row flex-wrap flow justify-center lg:justify-between">
-							<ul>
+						<section >
+							<ul class="flex flex-wrap gap-8 xl:gap-16 flow justify-center lg:justify-between">
 								for _,challenge := range constants.Challenges {
 									@components.ChallengeCard(challenge)
 								}
