--- a/app/components/challengeCard.templ
+++ b/app/components/challengeCard.templ
@@ -16,7 +16,7 @@ func dayNumber(numberDays int) string {
 
 templ ChallengeCard(challenge constants.Challenge) {
 	<li class="flex flex-col items-center xl:flex-row w-full justify-between gap-4 p-10 rounded-2xl bg-gray-500/10">
-		<article class="flex flex-col gap-4 w-full h-full  md:max-w-lg lg:max-w-96justify-between">
+		<article class="flex flex-col gap-4 w-full h-full  md:max-w-lg xl:max-w-96 justify-between">
 			<header class="flex flex-col gap-4">
 				<h2 class="text-3xl font-bold">
 					{ challenge.Title }
