--- a/app/views/index.templ
+++ b/app/views/index.templ
@@ -1,8 +1,6 @@
 package views
 
-import (
-	"github.com/AslanSN/CurriculumVitae/helpers"
-)
+import "github.com/AslanSN/CurriculumVitae/helpers"
 
 templ Index() {
 	<!DOCTYPE html>
@@ -12,13 +10,13 @@ templ Index() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>AslanSN CurriculumVitae</title>
 			<link rel="stylessheet" href="https://cdn.simplecss.org/simple.min.css"/>
-			<link rel="stylesheet" href={ string(helpers.RepoURL + "/css/output.css") }/>
-			<script src="/assets/js/htmx.min.js"></script>
+			<link rel="stylessheet" href={ string(helpers.RepoURL + "/css/output.css") }/>
+			<script src={ string(helpers.RepoURL + "/assets/js/htmx.min.js") }></script>
 			<link rel="shortcut icon" type="image/webp" href={ string(helpers.RepoURL + "/images/FaviconCV.webp") }/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rippleui@1.12.1/dist/css/styles.css"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 			<script src={ string(helpers.RepoURL + "/js/customAlert.js") }></script>
-			<script src="assets/js/customAlert.js"></script>
+			<script src={ string(helpers.RepoURL + "assets/js/customAlert.js") }></script>
 		</head>
 		<body>
 			@home()
