--- a/app/components/challengeCard.templ
+++ b/app/components/challengeCard.templ
@@ -25,12 +25,12 @@ templ ChallengeCard(challenge constants.Challenge) {
 					<li>
 						<b>Date range:{ " " } </b>{ challenge.Dates }
 					</li>
+					 <li>
+						<b>Duration:{ " " } </b>{ fmt.Sprintf(`%d %s`, challenge.Duration, dayNumber(challenge.Duration)) }
+					 </li>
 					// <li>
-					//	<b>Duration:{ " " } </b>{ fmt.Sprintf(`%d %s`, challenge.Duration, dayNumber(challenge.Duration)) }
+					//	<b>Conclusion:{ " " }</b>{ challenge.State }.
 					// </li>
-					<li>
-						<b>Conclusion:{ " " }</b>{ challenge.State }.
-					</li>
 				</ul>
 			</header>
 			<main>
