feat: update challenges display

--- a/app/components/navbar.templ
+++ b/app/components/navbar.templ
@@ -39,35 +39,9 @@ templ NavBar() {
 			<a class="navbar-item" href="#aboutMe">ABOUT ME</a>
 			<a class="navbar-item" href="#skills">SKILLS</a>
 			<a class="navbar-item" href="#experience">EXPERIENCE</a>
+			<a class="navbar-item" href="#challenges">CHALLENGES</a>
 		</div>
 		<div class="navbar-end">
-			// TODO
-			// <div class="navbar-item btn cursor-pointer">
-			// 	<div class="dropdwon-container justify-center">
-			// 		<div class="dropdwon dropdown-hover flex row-auto">
-			// 			<label tabindex="0" class="flex flex-row flex-nowrap items-center align-middle">
-			// 				<span>
-			// 					LANGUAGE
-			// 				</span>
-			// 				<span>
-			// 					@icons.DropdownIcon("currentColor")
-			// 				</span>
-			// 			</label>
-			// 			<div class="dropdown-menu dropdown-menu-bottom-center mt-10">
-			// 				<a class="dropdown-item text-sm">
-			// 					ENGLISH
-			// 				</a>
-			// 				<a tabindex="-1" class="dropdown-item text-sm">ESPAÑOL</a>
-			// 				{/*
-			// 				* // TODO
-			// 				* <a tabindex="-1" class="dropdown-item text-sm">FRANÇAIS</a>
-			// 				*/
-			// 				}
-			// 			</div>
-			// 		</div>
-			// 	</div>
-			// </div>
-			// <a class="navbar-item" href="mailto:aslan.staub@pm.me">CONTACT ME</a>
 			<label class="btn btn-ghost" for="modal-contact">CONTACT ME</label>
 		</div>
 	</div>
