--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -32,7 +32,7 @@ templ home() {
 					</section>
 					<section class="w-full mb-10">
 						<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
-							Challenges
+							CHALLENGES
 						</h1>
 						<section >
 							<ul class="flex flex-wrap gap-8 xl:gap-16 flow justify-center lg:justify-between">
