chore: fix challenges id

--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -31,10 +31,10 @@ templ home() {
 						</div>
 					</section>
 					<section class="w-full mb-10">
-						<h1 id="experience" class="text-5xl mb-6 w-fit font-bold">
+						<h1 id="challenges" class="text-5xl mb-6 w-fit font-bold">
 							CHALLENGES
 						</h1>
-						<section >
+						<section>
 							<ul class="flex flex-wrap gap-8 xl:gap-16 flow justify-center lg:justify-between">
 								for _,challenge := range constants.Challenges {
 									@components.ChallengeCard(challenge)
