--- a/app/components/sidebar.templ
+++ b/app/components/sidebar.templ
@@ -42,6 +42,9 @@ templ Sidebar() {
 								<li class="menu-item">
 									<a href="#experience">EXPERIENCE</a>
 								</li>
+								<li class="menu-item">
+									<a href="#challenges">CHALLENGES</a>
+								</li>
 							</ul>
 						</section>
 						<div class="divider my-0"></div>
