--- a/app/components/challengeCard.templ
+++ b/app/components/challengeCard.templ
@@ -15,7 +15,7 @@ func dayNumber(numberDays int) string {
 }
 
 templ ChallengeCard(challenge constants.Challenge) {
-	<li class="flex flex-col items-center xl:flex-row w-full justify-between gap-4 p-10 rounded-2xl bg-gray-500/10">
+	<li class="card flex flex-col items-center xl:flex-row w-full justify-between gap-4 p-10 rounded-2xl  max-w-full">
 		<article class="flex flex-col gap-4 w-full h-full  md:max-w-lg xl:max-w-96 justify-between">
 			<header class="flex flex-col gap-4">
 				<h2 class="text-3xl font-bold">
@@ -31,6 +31,7 @@ templ ChallengeCard(challenge constants.Challenge) {
 					// <li>
 					//	<b>Conclusion:{ " " }</b>{ challenge.State }.
 					// </li>
+
 				</ul>
 			</header>
 			<main>
