--- a/app/components/heroFooter.templ
+++ b/app/components/heroFooter.templ
@@ -9,8 +9,8 @@ templ HeroFooter() {
 		>
 			for _, socialMedia := range constants.SocialMediaList {
 				<li class="mx-2" key={ socialMedia.IconLabelParams.Id }>
-					@LinkItem(socialMedia.SocialMediaLink, nil) {
-						@IconLabel(socialMedia.IconLabelParams)
+					@LinkItem(socialMedia.SocialMediaLink, "") {
+						@IconLabel(socialMedia.IconLabelParams,  false, 10)
 					}
 				</li>
 			}
