--- a/app/components/iconLabel.templ
+++ b/app/components/iconLabel.templ
@@ -3,33 +3,43 @@ package components
 import (
 	icons "github.com/AslanSN/CurriculumVitae/app/components/iconComponents"
 	"github.com/AslanSN/CurriculumVitae/helpers"
+	"strings"
+	"fmt"
 )
 
-templ IconLabel(params helpers.IconLabelParams) {
+func iconClassesFormatter(iconSize int8) string {
+	defaultClasses := "w-auto h-8 cursor-pointer"
+
+	if iconSize == 0 {
+		return defaultClasses
+	}
+	stringifiedIconSize := fmt.Sprintf("%d", iconSize)
+	println(stringifiedIconSize)
+
+	return strings.Replace(defaultClasses, "8", stringifiedIconSize, 1)
+}
+
+templ IconLabel(params helpers.IconLabelParams, hasLabel bool, iconSize int8) {
 	<span class="flex flex-row items-center px-2 py-3">
-		if params.Id == "github" {
+		if hasLabel || params.Label != "" {
 			<label
 				for={ helpers.Identity(params.Id) }
 				class="cursor-pointer text-xl md:text-2xl me-2"
 			>
 				{ params.Label }
 			</label>
-			<span class="w-auto h-8 cursor-pointer">
-				@icons.GithubIcon()
-			</span>
-		} else {
-			<label
-				for={ helpers.Identity(params.Id) }
-				class="cursor-pointer text-xl md:text-2xl me-2"
-			>
-				{ params.Label }
-			</label>
-			<img
-				class="w-auto h-8 cursor-pointer"
-				id={ params.Id }
-				src={ string(params.Source) }
-				alt={ params.Alternative }
-			/>
 		}
+		<span class="w-auto h-8 cursor-pointer">
+			if params.Id == "github" {
+				@icons.GithubIcon()
+			} else {
+				<img
+					class={ iconClassesFormatter(iconSize) }
+					id={ params.Id }
+					src={ string(params.Source) }
+					alt={ params.Alternative }
+				/>
+			}
+		</span>
 	</span>
 }
