--- a/app/components/skills.templ
+++ b/app/components/skills.templ
@@ -7,11 +7,11 @@ templ Skills() {
 		<h1 class="text-5xl mb-6 w-fit font-bold">
 			SKILLS
 		</h1>
-		<ul class="xl:grid xl:auto-cols-min xl:grid-cols-3 xl:items-center flex flex-col sm:flex-row flex-wrap w-fit items-baseline h-fit ">
+		<ul class="xl:grid xl:auto-cols-min xl:grid-cols-3 xl:items-center flex flex-row flex-wrap w-fit items-baseline h-fit ">
 			for _, skill := range constants.SkillsList {
 				<li key={ skill.IconLabelParams.Id } class="m-2 sm:mx-0">
 					@LinkItem(skill.Link, nil) {
-						@IconLabel(skill.IconLabelParams)
+						@IconLabel(skill.IconLabelParams, true, 0)
 					}
 				</li>
 			}
