--- a/app/views/home.templ
+++ b/app/views/home.templ
@@ -7,11 +7,12 @@ import (
 )
 
 templ home() {
-	<div class="sticky flex h-screen flex-row gap-4 overflow-y-auto rounded-lg sm:overflow-x-hidden">
+	<div class="sticky flex h-screen flex-row gap-4 overflow-y-auto rounded-lg sm:overflow-x-hidden sm:flex-col">
 		<main class="flex w-full flex-col px-8 sm:px-20">
 			@layouts.StickyLayout() {
 				<div class="flex w-full flex-row flex-wrap gap-4">
 					@components.ContactModal()
+					@components.ShareModal()
 					<div class="absolute z-40 "></div>
 					@components.Hero()
 					<section class="w-full grid grid-flow-row lg:grid-flow-col m-0 mb-8 gap-16 justify-items-start items-center justify-center lg:content-between">
@@ -45,5 +46,7 @@ templ home() {
 				</div>
 			}
 		</main>
+		<footer>
+		</footer>
 	</div>
 }
