--- a/app/components/skills.templ
+++ b/app/components/skills.templ
@@ -9,7 +9,7 @@ templ Skills() {
 		</h1>
 		<ul class="xl:grid xl:auto-cols-min xl:grid-cols-3 xl:items-center flex flex-row flex-wrap w-fit items-baseline h-fit ">
 			for _, skill := range constants.SkillsList {
-				<li key={ skill.IconLabelParams.Id } class="m-2 sm:mx-0">
+				<li key={ skill.IconLabelParams.Id } id={ skill.IconLabelParams.Id + "Skills" } class="m-2 sm:mx-0">
 					@LinkItem(skill.Link, nil) {
 						@IconLabel(skill.IconLabelParams, true, 0)
 					}
