chore: improve icons management

--- a/app/components/challengeCard.templ
+++ b/app/components/challengeCard.templ
@@ -31,7 +31,6 @@ templ ChallengeCard(challenge constants.Challenge) {
 					// <li>
 					//	<b>Conclusion:{ " " }</b>{ challenge.State }.
 					// </li>
-
 				</ul>
 			</header>
 			<main>
@@ -48,7 +47,7 @@ templ ChallengeCard(challenge constants.Challenge) {
 								Visit Repo
 							</label>
 							<span class="w-auto h-8 cursor-pointer">
-								@icons.GithubIcon()
+								@icons.GithubIcon(0)
 							</span>
 						</div>
 					}
